<resources>
    <string name="app_name">LendaBook</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_desc">Group Description</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="group_name_exists">Group name already exist. Choose another group name</string>
    <string name="email_exists">Email already exists. Use another email address</string>
    <string name="successfully_created_group">Group has been successfully created. Go back to Account</string>
    <string name="successfully_joined_group">You have successfully joined this group</string>
    <string name="already_a_member_of_group">You are already a member of this group</string>
    <string name="email_sent_to_owner">Email for request has been successfully sent to book owner</string>
    <string name="email_subject">Request for book</string>
    <string name="email_body">The book titled %1$s has been requested by the user with email %2$s</string>


    <string name="add_a_book">Add a book</string>
    <string name="book_name">Book Name</string>
    <string name="upload_book_image">Upload book image</string>
    <string name="suc_add_book">Book was successfully added</string>
    <string name="error_add_book">An error occurred please try again</string>
    <string name="error_missing_fields">Please fill all fields</string>
    <string name="select_a_group">Select a group</string>

    <string name="book_image_desc">This is the image of a book</string>
    <string name="add_book_fab_desc">Click this to add another book</string>

    <string name="search_group">Search Book</string>
    <string name="choose_book">Choose Book Image</string>
    <string name="upload_book">Upload Book</string>
    <string name="request_book">Request book</string>
    <string name="return_book">Confirm return</string>

    <string name="join_group">Join Group</string>
    <string name="join">Join</string>

    <string name="register">Register as a User</string>

    <string name="shared_pref">lendabook_shared_pref</string>
    <string name="existing_user_field">existing_user</string>
    <string name="existing_email_field">existing_email</string>
    <string name="no_books_owned">no_books_owned</string>
    <string name="no_books_borrowed">no_books_borrowed</string>
    <string name="no_books_owned_widget">No of books owned: %1$d</string>
    <string name="no_books_borrowed_widget">No of books borrowed: %1$d</string>

    <string name="title_activity_account">AccountActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">My Books</string>
    <string name="tab_text_2">Borrowed Books</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>



</resources>
