<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.lendabook.TestActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_group"
        android:orderInCategory="100"
        android:title="@string/create_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_join_group"
        android:orderInCategory="100"
        android:title="@string/join_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search_book"
        android:orderInCategory="100"
        android:title="@string/search_group"
        app:showAsAction="never"/>
</menu>
