<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/marginTop"
    android:layout_marginBottom="@dimen/marginBottom"
    android:layout_marginStart="@dimen/marginLeft"
    android:layout_marginEnd="@dimen/marginRight"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/registerTV"
        android:text="@string/register"
        style="@style/HeaderStyle"/>

    <TextView
        android:id="@+id/errorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error_color"
        android:textSize="@dimen/normal_text_size"
        android:layout_below="@id/registerTV"/>


    <EditText
        android:id="@+id/email_ET"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/registerTV"
        style="@style/FormStyle"/>

    <EditText
        android:id="@+id/username_ET"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_below="@id/email_ET"
        style="@style/FormStyle"/>

    <EditText
        android:id="@+id/password_ET"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/username_ET"
        style="@style/FormStyle"/>

    <Button
        android:id="@+id/register_BTN"
        style="@style/ButtonStyle"
        android:text="@string/join"
        android:layout_below="@id/password_ET"/>

</RelativeLayout>