<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/marginTop"
    android:layout_marginBottom="@dimen/marginBottom"
    android:layout_marginStart="@dimen/marginLeft"
    android:layout_marginEnd="@dimen/marginRight"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    tools:context=".JoinGroupActivity">

    <TextView
        android:id="@+id/join_groupTV"
        android:text="@string/join_group"
        style="@style/HeaderStyle"/>

    <TextView
        android:id="@+id/join_errorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error_color"
        android:textSize="@dimen/normal_text_size"
        android:layout_below="@id/join_groupTV"/>

    <TextView
        android:id="@+id/join_successTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/normal_text_size"
        android:layout_below="@id/join_groupTV"/>

    <EditText
        android:id="@+id/group_name_ET"
        android:hint="@string/group_name"
        android:inputType="text"
        android:layout_below="@id/join_groupTV"
        style="@style/FormStyle"/>

    <Button
        android:id="@+id/join_BTN"
        style="@style/ButtonStyle"
        android:text="@string/join"
        android:layout_below="@id/group_name_ET"/>

</RelativeLayout>